--- a/Site/index.html
+++ b/Site/index.html
@@ -187,7 +187,13 @@
         </div>
     </div>
 
-    
+    <footer class="bgc-333">
+        <div class="footerBox padingLR54">
+            <p class="text-center footerText mb-0">
+                All other trademarks and copyrights are the property of their respective owners. Use of these names, trademarks and brands does not imply endorsement.
+            </p>
+        </div>
+    </footer>
 
     <script src="./static/scripts/jquery-3.7.0.min.js"></script>
     <script src="./static/scripts/popper.js_2.9.2.min.js"></script>
